# WolfStack

./: .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSING.md  README.md  allow-kernelcare.sh  allow-pbs.sh  allow-rclone.sh  allow-updates.sh  allow-wolfnet.sh  audit-outbound.sh  audit-processes.sh  block-outbound.sh  cloud-setup.sh  debug_wolfnet_docker.sh  deploy-new.sh  ibmsetup.sh  scratch.rs  setup.sh  uninstall.sh  wolfproxy.toml
.gemini/: storage_manager_plan.md
.github/workflows/: arm-tools.yml  discord-changelog.yml  lock-interactions.yml  release.yml  unraid-tools.yml
docs/: xcp-ng-integration.md
pkg/: index.json
scripts/: gen-changelog.sh
src/: alerting.rs  at_rest_crypto.rs  bruteforce.rs  cluster_join.rs  console.rs  deps.rs  diag.rs  icons.rs  local_ca.rs  mail_relay.rs  main.rs  mtls.rs  mysql_editor.rs  netaddr.rs  paths.rs  patreon.rs  ports.rs  scan_detector.rs  secret_audit.rs  secret_rotation.rs  security.rs  security_audit.rs  tui.rs
src/agent/: mod.rs
src/ai/: mod.rs  wolfstack-kb.md
src/antivirus/: mod.rs
src/api/: cluster_browser_proxy.rs  console.rs  container_vnc.rs  mod.rs  pve_console.rs
src/appstore/: mod.rs
src/array/: mod.rs
src/auth/: log_monitor.rs  mod.rs  oidc.rs  users.rs
src/backup/: mod.rs
src/ceph/: mod.rs
src/certbot/: mod.rs
src/cluster_browser/: mod.rs
src/compat/: mod.rs
src/configurator/: apache.rs  exec_target.rs  mod.rs  nginx.rs  toml_editor.rs
src/containers/: docker_dns.rs  image_watcher.rs  mod.rs
src/dns_providers/: mod.rs
src/edge/: reconcile.rs  store.rs  teardown.rs
src/exposure/: mod.rs
src/federation/: mod.rs
src/galera/: mod.rs
src/gateway/: mod.rs  nfs.rs  orchestrator.rs  samba.rs  sources.rs
src/gluster/: mod.rs
src/installer/: mod.rs  packages.rs  self_signed.rs  unraid_tools.rs
src/integrations/: mod.rs
src/integrations/connectors/: netbird.rs  truenas.rs  unifi.rs
src/kubernetes/: mod.rs
src/monitoring/: mod.rs
src/networking/: lan_bridge.rs  mod.rs  vlan.rs
src/networking/router/: api.rs  dhcp.rs  firewall.rs  health.rs  host_dns.rs  http_proxy.rs  mod.rs  proxy_runtime.rs  topology.rs  wan.rs
src/pools/: cloud_init.rs  mod.rs  native_driver.rs  orchestrator.rs  proxmox_driver.rs  xo_driver.rs
src/predictive/: ack.rs  backup_freshness.rs  compromise_indicators.rs  container_boot.rs  container_disk.rs  container_memory.rs  disk_fill.rs  missing_subnet_route.rs  mod.rs  notify.rs  orchestrator.rs  osv.rs  port_conflict.rs  proposal.rs  security_posture.rs  tamper_detection.rs  threat_intel.rs  threshold.rs  unused_packages.rs  vulnerability.rs  wolfnet_dhcp.rs  wolfnet_reachability.rs
src/proxmox/: mod.rs
src/services_discovery/: mod.rs
src/sql_connections/: mod.rs
src/statuspage/: mod.rs
src/storage/: mod.rs
src/support/: mod.rs
src/threat_intel/: firewall.rs  mod.rs
src/truenas/: mod.rs
src/unraid/: mod.rs
src/ups/: mod.rs
src/vms/: api.rs  manager.rs  mod.rs  passthrough.rs  prereqs.rs
src/web/: mod.rs
src/wolfagents/: agent_loop.rs  dispatch.rs  safety.rs
src/wolfflow/: mod.rs
src/wolffunctions/: mod.rs  runtime.rs
src/wolfhost/: config.rs  mod.rs
src/wolfhost/api/: branding.rs  customers.rs  da_packages.rs  da_system.rs  dashboard.rs  database.rs  directadmin.rs  dns.rs  info.rs  invoices.rs  migration.rs  mod.rs  plans.rs  servers.rs  services.rs  tickets.rs
src/wolfhost/models/: certificate.rs  customer.rs  database.rs  directadmin.rs  domain.rs  email.rs  ftp.rs  invoice.rs  migration.rs  mod.rs  plan.rs  service.rs  ticket.rs
src/wolfhost/portal/: account.rs  apps.rs  auth.rs  autoresponders.rs  backups.rs  billing.rs  catchall.rs  cron.rs  da_backups.rs  da_helper.rs  dashboard.rs  databases.rs  db_users.rs  domains.rs  email.rs  files.rs  forwarders.rs  ftp.rs  logs.rs  mailing_lists.rs  mod.rs  passwords.rs  php.rs  pointers.rs  protected_dirs.rs  redirects.rs  security.rs  spam.rs  ssh_keys.rs  ssl.rs  sso.rs  subdomains.rs  tickets.rs  usage.rs
src/wolfhost/provisioning/: apps.rs  container.rs  directadmin.rs  dns.rs  log_stream.rs  mail.rs  mod.rs  native_tools.rs
src/wolfhost/store/: json_store.rs  mod.rs  mysql_store.rs
src/wolfrun/: mod.rs
src/wolfscale/: mod.rs
src/wolfusb/: mod.rs
src/xo/: mod.rs
tools/: build-iso.sh
web/: console.html  index.html  infographic.html  login.html  manifest.json  sw.js  vnc.html  wolfnet-global.html  wolfstack-kb.md
web/css/: style.css  wolfhost.css
web/js/: app.js  icons-clean.js  terminal-console.js  wolfhost.js  wolfrouter.js
web/learn/: 0-1-what-is-a-server.md  6-3-restore.md  7-2-alerts.md  adv-1-domain-https.md  done-1-checklist.md  l3-1-think-like-a-defender.md  l3-2-firewall.md  l3-3-detect-intruders.md  l3-4-secrets-and-updates.md  l3-5-see-attacks-coming.md  l3-6-when-something-gets-in.md  l3-7-defenders-checklist.md  sec-1-secure-your-login.md  sec-2-harden-the-server.md
web/wolfhost-portal/: index.html  portal.css  portal.js
