[package]
name = "wolfstack"
version = "7.7.9"
edition = "2021"
authors = ["Wolf Software Systems Ltd"]
description = "Server management platform for the Wolf software suite"
license = "FSL-1.1-Apache-2.0"
repository = "https://github.com/wolfsoftwaresystemsltd/WolfStack"

[dependencies]
# Web framework
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-files = "0.6"
actix-rt = "2"
actix-ws = "0.3"
portable-pty = "0.8"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for agent communication
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# TLS
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System monitoring
sysinfo = "0.32"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
libc = "0.2"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false }

# S3 client (pure Rust — works on IBM Power/ppc64le, no C/C++ deps)
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
lz4_flex = "0.11"

[[bin]]
name = "wolfstack"
path = "src/main.rs"
