[package]
name = "wolfstack"
version = "8.9.0"
edition = "2021"
authors = ["Wolf Software Systems Ltd"]
description = "Server management platform for the Wolf software suite"
license = "FSL-1.1-Apache-2.0"
repository = "https://github.com/wolfsoftwaresystemsltd/WolfStack"

[dependencies]
# Web framework
actix-web = { version = "4", features = ["openssl"] }
actix-files = "0.6"
actix-rt = "2"
actix-ws = "0.3"
actix-multipart = "0.7"
portable-pty = "0.8"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for agent communication
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }

# TLS (OpenSSL — system native, no CryptoProvider headaches)
openssl = "0.10"
native-tls = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System monitoring
sysinfo = "0.32"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
libc = "0.2"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false }

# S3 client (pure Rust — works on IBM Power/ppc64le, no C/C++ deps)
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
lz4_flex = "0.11"

# MySQL database editor
mysql_async = "0.34"

[[bin]]
name = "wolfstack"
path = "src/main.rs"
